--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@ if ("ontouchstart" in document.documentElement) {
 	I use MathJax to create formulas with LaTeX-code and google code prettify to have nice looking source code.
 -->
 <script type="text/javascript"
-			src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
