Corrected 2 more URLs.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ u { color: 'umber' }
 				impress.js - Include a website using an iframe
 			</div>
 			<div class="contend">
-				<iframe size="100%" src='http://imagej.nih.gov/ij/'></iframe>
+				<iframe size="100%" src='https://imagej.nih.gov/ij/'></iframe>
 			</div>
 		</div>
 
@@ -308,7 +308,7 @@ u { color: 'umber' }
 				impress.js - You can even watch a video
 			</div>
 			<div class="contend">
-				<iframe src="http://www.youtube.com/embed/CxmvFYp8EtU" width="640px" height="400px"></iframe>
+				<iframe src="https://www.youtube.com/embed/CxmvFYp8EtU" width="640px" height="400px"></iframe>
 				<p style="width:640px; margin:auto;">To bad there is no video about the Zeiss Libra 200FE with an in-column Omega filter on <a href="http://www.youtube.com">youtube</a>.</p>
 			</div>
 		</div>
