removed % from filenames.

--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@ u { color: 'umber' }
 			<div class="contend">
 				<table class="nomargin">
 					<tr>
-						<td><dt><img src="Bilder/SR-EELS_0%.png" width="100%" /></dt><dd>SpecMag=100 and QSinK7=0%</dd></td>
-						<td><dt><img src="Bilder/SR-EELS_-36%.png" width="100%" /></dt><dd>SpecMag=100 and QSinK7=-36%</dd></td>
+						<td><dt><img src="Bilder/SR-EELS_0.png" width="100%" /></dt><dd>SpecMag=100 and QSinK7=0%</dd></td>
+						<td><dt><img src="Bilder/SR-EELS_-36.png" width="100%" /></dt><dd>SpecMag=100 and QSinK7=-36%</dd></td>
 					</tr>
 				</table>
 				<ul>
@@ -715,7 +715,7 @@ u { color: 'umber' }
 				Aberrations - 2D-visualization
 			</div>
 			<div class="contend">
-				<dt><img height="600px" src="Bilder/borders_0%.svg"/></dt>
+				<dt><img height="600px" src="Bilder/borders_0.svg"/></dt>
 				<dd style="margin-top: -20px">$$\tilde{x}(\Delta E) = \sum^2_{i,j=0}a_{ij}\cdot\Delta E^i\cdot x_0^j $$</dd>
 			</div>
 		</div>
@@ -773,7 +773,7 @@ u { color: 'umber' }
 				Correction - 2D-visualization
 			</div>
 			<div class="contend">
-				<dt><img height="600px" src="Bilder/distortion_0%.svg"/></dt>
+				<dt><img height="600px" src="Bilder/distortion_0.svg"/></dt>
 				<dd style="margin-top: -20px">$$x_w(\Delta E) = \sum^2_{i,j=0}a_{ij}\cdot\Delta E^i\cdot x_0^j(w) $$</dd>
 			</div>
 		</div>
