Fix wrong file name in index.html:
'SR-EELS_0%.png' was changed to 'SR-EELS_0.png'.

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ u { color: 'umber' }
 				<table width="100%">
 					<tr>
 						<td><dt><img src="Bilder/TEM_FeCr.png" width="100%" /></dt><dd>conventional TEM</dd></td>
-						<td><dt><img src="Bilder/SR-EELS_0%.png" width="100%" /></dt><dd>SR-EELS (~475eV to ~750eV)</dd></td>
+						<td><dt><img src="Bilder/SR-EELS_0.png" width="100%" /></dt><dd>SR-EELS (~475eV to ~750eV)</dd></td>
 					</tr>
 				</table>
 				<ul>
